# resume-uploader-backend

./: README.md  commands.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 110fa98eb114_create_table.py
app/: main.py
app/db/: config.py
app/resume/: models.py  routers.py  schemas.py  services.py  utils.py
